services/apps/jona-2/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jona-2
  namespace: jona-2
  labels:
    app: jona-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jona-2
  template:
    metadata:
      labels:
        app: jona-2
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
