services/apps/jona-2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jona-2
  namespace: jona-2
spec:
  selector:
    app: jona-2
  ports:
    - name: http
      port: 80
      targetPort: 80
